# NVIDIA-BE-SCU-Hackathon

./: .env.example  README.md  main.py  pyproject.toml
app/core/: config.py
app/schemas/: api.py  document.py
app/services/: analysis_service.py  chat_session.py  document_processor.py  embedding_service.py  guidance_service.py  ocr_service.py  vector_store.py
docs/: index.html
scripts/: dev_e2e.py  write_sample_pdf.py
tests/: test_app.py  test_document_processor_ocr.py  test_no_pdf_response.py
