[project]
name = "nvidia-be"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.118.0",
    "langchain>=0.3.27",
    "uvicorn>=0.37.0",
    "python-multipart>=0.0.9",
    "pypdf>=4.3.1",
    "numpy>=2.1.3",
    "langchain-nvidia-ai-endpoints>=0.3.4",
    "pytest>=8.3.0",
    "fpdf>=1.7.2",
    "pypdfium2>=4.27.0",
    "pillow>=10.4.0",
    "httpx>=0.27.0",
]

[project.scripts]
dev = "uvicorn main:app --reload --port 8000"
serve = "gunicorn main:app -k uvicorn.workers.UvicornWorker --bind 0.0.0.0:8000 --workers 4"
